[tool.poetry]
name = "osumix"
version = "0.1.0"
description = "A command-line tool for converting beatmaps into audio files."
authors = ["Justin <jbtcao@gmail.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/skippi/osumix"

[tool.poetry.dependencies]
python = "^3.6"
slider = "^0.1.0"
pydub = "^0.23.0"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
osumix = 'osumix.shell:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
